# trove

./: .gitignore  README.md  TODO.md  distance-metrics.py  distance-scoring-metrics.json  distance_metric_bias_records.json  env.template.sh  environment.yml  manage.py  pyproject.toml  requirements.txt  robots.txt  saguaro_tom-ssl.conf  saguaro_tom.conf  trove-ssl.conf  trove.conf
.claude/: settings.json
.github/workflows/: ci.yml
candidate_vetting/: api.py  apps.py  config.py  create_galaxy_view.sql  forms.py  middleware.py  models.py  pyproject.toml  tasks.py  urls.py  util.py  vet.py  vet_basic.py  vet_bns.py  vet_kn_in_sn.py  vet_phot.py  vet_super_kn.py  views.py
candidate_vetting/migrations/: 0006_desidr1q3c_nedlvsq3c_twomassq3c_ztfvarstarq3c.py
candidate_vetting/public_catalogs/: catalog.py  dynamic_catalogs.py  phot_catalogs.py  static_catalogs.py  util.py
candidate_vetting/templates/candidate_vetting/: nle_associate_targets_form.html  update_redshift_form.html  vetting_form.html
candidate_vetting/trove_candidate_vetting/: #phot_catalogs.py#  .#phot_catalogs.py  asassn.py  catalog.py  gaia.py  milliquas.py  panstarrs.py  phot_catalogs.py  static_catalogs.py  util.py
candidate_vetting/vetting_app/: manage.py  models.py
custom_code/: alertstream_handlers.py  apps.py  atlas.py  cssfield_selection.py  data_processor.py  facilities.py  filters.py  forms.py  healpix_utils.py  hooks.py  managers.py  mmt.py  models.py  nle_ingestion.py  tasks.py  urls.py  views.py
custom_code/facilities/: lco.py  mmt.py
custom_code/management/: NEDLVS2PGSQL.py  NEDLVS_config.py  catalog2PGSQL.py
custom_code/migrations/: 0001_initial.py  0002_rename_target_targetlistextra_target_list_and_more.py  0003_candidate.py  0004_alter_candidate_options.py  0005_candidate_mlscore_bogus_candidate_mlscore_real.py  0006_cssfield.py  0007_alter_candidate_field.py  0008_alter_candidate_field.py  0009_cssfieldcredibleregion_and_more.py  0010_alter_cssfield_options_cssfield_adjacent.py  0011_cssfieldcredibleregion_group_and_more.py  0012_cssfieldcredibleregion_probability_contained.py  0013_alter_cssfieldcredibleregion_options_and_more.py  0014_alter_credibleregioncontour_localization_and_more.py  0015_alter_credibleregioncontour_id.py  0015_cssfield_has_reference.py  0016_profile.py  0017_profile_burst_alerts.py  0018_cssfieldcredibleregion_first_observable.py  0019_cssfieldcredibleregion_treasuremap_id.py  0020_cssfieldcredibleregion_observation_record_and_more.py  0021_alter_candidate_options_remove_candidate_exclude_and_more.py  0022_remove_candidate_filename.py  0023_remove_cssfieldcredibleregion_unique_localization_css_field_and_more.py  0024_remove_surveyfieldcredibleregion_treasuremap_id_and_more.py  0025_delete_profile.py
custom_code/processors/: atlas_processor.py  photometry_processor.py  spectroscopy_processor.py  spectrum_reader.py
custom_code/templatetags/: candidate_extras.py  custom_code_extras.py  event_candidate_extras.py  nonlocalizedevent_extras.py  obs_extras.py  photometry_extras.py  skymap_extras.py  spectroscopy_extras.py  target_extras.py  target_list_extras.py
ingestion/: DESI_DR1_config.py  NEDLVS_config.py  catalog2PGSQL.py  catalog_config.py  ingest_extras.py  numpy2PGSQL.py
saguaro_tom/: api.py  asgi.py  settings.py  settings_local.py  settings_local.template.py  urls.py  wsgi.py
saguaro_tom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scoring/: api.py  apps.py  config.py  dist_scoring_helpers.py  dynamic_catalogs.py  forms.py  healpix_utils.py  models.py  scoring.py  tasks.py  urls.py  util.py  vet_basic.py  vet_bns.py  vet_kn_in_sn.py  vet_phot.py  vet_super_kn.py  views.py
scoring/migrations/: 0001_initial.py  0002_copy_legacy_score_factors.py  0002_create_views.py  0003_scorefactor.py  0004_rename_event_candidate_id_scorefactor_event_candidate.py  0005_alter_scorefactor_unique_together.py  0006_desidr1q3c_nedlvsq3c_twomassq3c_ztfvarstarq3c.py  0007_cosmicflows4q3c_hecate1q3c_hecate2q3c_lsdr10southq3c_and_more.py  0008_alter_lsdr10southtargetmatch_table_and_more.py  0009_alter_cosmicflows4targetmatch_unique_together_and_more.py  0010_delete_usergalaxyq3c_delete_asassnq3c_and_more.py
sphinx_docs/: apps.py  urls.py  views.py
templates/tom_common/: base.html  index.html  navbar_content.html  update_user_profile.html
templates/tom_nonlocalizedevents/: cssfield_list.html  grb_list.html  gw_list.html  neutrino_list.html  nonlocalizedevent_list.html  unknown_list.html
templates/tom_observations/: observation_form.html
templates/tom_surveys/: observation_list.html
templates/tom_targets/: candidate_list.html  target_detail.html  target_grouping.html  target_list.html  targetclassify_form.html  targetlist_form.html  targetreport_form.html
templates/tom_treasuremap/: pointing_list.html
templates/trove_targets/: custom_target_create_form.html
tests/: conftest.py  test_filters.py  test_management_commands.py  test_models.py  test_nle_ingestion.py  test_spectrum_reader.py  test_spectrum_reader_processor.py  test_templatetags.py  test_vetting.py  test_views.py
tests/data/: GW170817-update.json  README.md
tom_surveys/: apps.py  filters.py  models.py  urls.py  views.py
tom_surveys/migrations/: 0001_initial.py  0002_surveyfield_and_more.py  0003_auto_20230810_2050.py  0004_alter_surveyobservationrecord_options.py
tom_treasuremap/: apps.py  filters.py  models.py  reporting.py  urls.py  views.py
tom_treasuremap/migrations/: 0001_initial.py  0002_remove_treasuremappointing_unique_nonlocalizedevent_observation_record_and_more.py  0003_alter_treasuremappointing_options.py
trove/: asgi.py  settings.py  settings_local.template.py  wsgi.py
trove_nonlocalizedevents/: __init__.py  apps.py  forms.py  permissions.py  urls.py  views.py
trove_targets/: __init__.py  api.py  apps.py  forms.py  models.py  urls.py  views.py
trove_targets/migrations/: 0001_initial.py  0002_target_classification_target_mwebv_target_redshift.py  0003_alter_target_healpix.py
trove_tom/: asgi.py  auth.py  settings.py  settings_local.template.py  wsgi.py
(+60 files in other folders)
