[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trove"
version = "0.1.0"
description = "TROVE (A Tool for Rapid Object Vetting and Examination): an open-source, API-enabled platform for the real-time evaluation of transients associated with multi-messenger astrophysics events"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
authors = [
    {name = "TROVE Team"},
]
keywords = [
    "astronomy",
    "multi-messenger",
    "gravitational waves",
    "transients",
    "time domain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://astro-trove.github.io"
Repository = "https://github.com/astro-trove/trove.git"
Issues = "https://github.com/astro-trove/trove/issues"

[tool.setuptools]
packages = [
    "trove_tom",
    "custom_code",
    "scoring",
    "trove_nonlocalizedevents",
    "trove_targets",
    "tests",
]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/**", "static/**", "migrations/**"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "trove_tom.settings"
python_files = ["test_*.py", "*_test.py"]
markers = [
    "slow: tests that read or convert large skymap fixtures",
]
